WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88764
[WK2] Fix client interface size for WKPageLoaderClient
https://bugs.webkit.org/show_bug.cgi?id=88764
Summary
[WK2] Fix client interface size for WKPageLoaderClient
Grzegorz Czajkowski
Reported
2012-06-11 00:48:50 PDT
Fixes offset of WKPageLoaderClient for version 0 by adding didDetectXSSForFrame.
Attachments
proposed patch
(1.24 KB, patch)
2012-06-11 00:50 PDT
,
Grzegorz Czajkowski
andersca
: review+
andersca
: commit-queue-
Details
Formatted Diff
Diff
updated ChangeLog according to Anders' review
(1.33 KB, patch)
2012-06-13 00:14 PDT
,
Grzegorz Czajkowski
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Grzegorz Czajkowski
Comment 1
2012-06-11 00:50:30 PDT
Created
attachment 146801
[details]
proposed patch
Alexey Proskuryakov
Comment 2
2012-06-11 12:49:56 PDT
I don't understand the versioning scheme enough to tell what this does exactly. Could you please explain what this actually fixes? One would expect version 0 to have stabilized long ago.
Grzegorz Czajkowski
Comment 3
2012-06-12 06:40:43 PDT
(In reply to
comment #2
)
> I don't understand the versioning scheme enough to tell what this does exactly. Could you please explain what this actually fixes? One would expect version 0 to have stabilized long ago.
interfaceSizesByVersion it's a table that keeps size of structure for each version of client interface. If someone wants to change it (because of API change) then the structure should be extended by adding a new callback to the current and bump version. For example, version 0 of WKBundlePageLoaderClient includes members of structure from 0 to 17. To include last callback (didHandleOnloadEventsForFrame) we have to give offset to next one (didLayoutForFrame) but it isn't attached. This patch adds didDetectXSSForFrame callback for version 0 of WKPageLoaderClient because offset should be set to next member of structure.
Anders Carlsson
Comment 4
2012-06-12 10:30:54 PDT
Comment on
attachment 146801
[details]
proposed patch Please explain in the ChangeLog that the offset should be of the first new callback that was added in the new version. Looks fine otherwise!
Grzegorz Czajkowski
Comment 5
2012-06-13 00:14:10 PDT
Created
attachment 147246
[details]
updated ChangeLog according to Anders' review Thanks Anders for review!
WebKit Review Bot
Comment 6
2012-06-14 00:04:34 PDT
Comment on
attachment 147246
[details]
updated ChangeLog according to Anders' review Clearing flags on attachment: 147246 Committed
r120290
: <
http://trac.webkit.org/changeset/120290
>
WebKit Review Bot
Comment 7
2012-06-14 00:04:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug