[WK2] Fix client interface size for WKPageLoaderClient. https://bugs.webkit.org/show_bug.cgi?id=88764

Reviewed by Anders Carlsson.

Fixes offset of WKPageLoaderClient for version 0 by adding didDetectXSSForFrame.
The offset should be off the first new callback that was added in the new version.

* Shared/APIClientTraits.cpp:
(WebKit):


Canonical link: https://commits.webkit.org/106908@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120290 268f45cc-cd09-0410-ab3c-d52691b4dbfc